--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
     "insertPragma": true,
     "jsxSingleQuote": false,
     "printWidth": 150,
-    "requirePragma": true,
+    "requirePragma": false,
     "semi": true,
     "singleQuote": false,
     "tabWidth": 4,
